# parton-cli

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/parton-cli/: Cargo.toml
crates/parton-cli/src/: main.rs
crates/parton-cli/src/commands/: env_check.rs  kyp.rs  mod.rs  run.rs  run_helpers.rs  setup.rs
crates/parton-cli/src/tui/: clarify.rs  mod.rs  multi_select.rs  plan_review.rs  plan_view.rs  progress.rs  select.rs  setup_wizard.rs  spinner.rs  style.rs
crates/parton-core/: Cargo.toml
crates/parton-core/src/: clarification.rs  config.rs  error.rs  lib.rs  plan.rs  provider.rs  result.rs  stage.rs  tool.rs
crates/parton-executor/: Cargo.toml
crates/parton-executor/src/: compliance.rs  contract.rs  diff.rs  lib.rs  output.rs  prompt.rs  runner.rs  scaffold.rs  structure_check.rs  writer.rs
crates/parton-graph/: Cargo.toml
crates/parton-graph/src/: detect.rs  error.rs  lib.rs  schema.rs  store.rs  types.rs
crates/parton-graph/src/grammar/: download.rs  mod.rs  registry.rs
crates/parton-graph/src/graph/: edges.rs  mod.rs
crates/parton-graph/src/kyp/: cluster.rs  compress.rs  enrich.rs  format.rs  lock.rs  mod.rs  pattern.rs  symbols.rs
crates/parton-graph/src/queries/: generic.rs  go_lang.rs  mod.rs  python.rs  rust_lang.rs  typescript.rs
crates/parton-graph/src/query/: context.rs  mod.rs  summary.rs
crates/parton-graph/src/scan/: mod.rs  parser.rs  walker.rs
crates/parton-graph/src/tools/: handlers.rs  mod.rs
crates/parton-graph/src/verify/: check.rs  mod.rs
crates/parton-knowledge/: Cargo.toml
crates/parton-knowledge/src/: entry.rs  error.rs  init.rs  learning.rs  lib.rs  store.rs
crates/parton-planner/: Cargo.toml
crates/parton-planner/src/: clarify.rs  context.rs  lib.rs  parse.rs  prompt.rs  skeleton.rs  validate.rs  validate_tests.rs
crates/parton-providers/: Cargo.toml
crates/parton-providers/src/: cli.rs  factory.rs  lib.rs  ollama.rs  openai.rs
crates/parton-providers/src/cli/: mod.rs  tool_use.rs
crates/parton-providers/src/openai/: helpers.rs  mod.rs  tool_use.rs  types.rs
release/v0.2.1/: checksums.txt  install.sh
scripts/: build-release.sh
