[package]
name = "parton-graph"
version.workspace = true
edition.workspace = true

[dependencies]
parton-core = { path = "../parton-core" }
tree-sitter = { version = "0.26", features = ["wasm"] }
dirs = "6"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
