[package]
name = "parton-planner"
version.workspace = true
edition.workspace = true

[dependencies]
parton-core = { path = "../parton-core" }
futures-util = "0.3"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
