[package]
name = "parton-providers"
version.workspace = true
edition.workspace = true

[dependencies]
parton-core = { path = "../parton-core" }
tokio.workspace = true
reqwest.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
